# xtFire

./: readme.md
arduinofirmware/c64turbo/: c64turbo.ino
arduinofirmware/xtFireW/: xtFireW.ino
driver/: .gitignore  CMakeLists.txt  bootstrap.sh
driver/modules/: CMakeLists.txt
driver/modules/include/xtfire/: consts.h  libdefs.h  xtfire.h
driver/modules/src/: xtfire.cpp
driver/samples/: CMakeLists.txt
driver/samples/src/: notes.txt  test.cpp
hardware/: joystick_turboC64.fzz
resources/: components.txt  components.xlsx
resources/arduinofirmware/xtFireW/: xtFireW.ino
resources/driver/: example.cpp
